--- a/gb/12/12/3/n3743569.md
+++ b/gb/12/12/3/n3743569.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dzedc2565/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dzedc2565/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dzedc2565/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dzedc2565/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dzedc2565/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dzedc2565/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dzedc2565/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dzedc2565/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>香港反洗脑落幕 台湾反垄断升温</h2>
 
 <h6></h6>
 <hr>
 <p>【大纪元2012年12月03日讯】（大纪元记者李怡君综合报导）几个月前，香港教育局将“德育与国民教育科”纳入中小学必修课程，外界担心是中共的“爱国洗脑教育”，因而发起一连串抗争行动，迫使香港特首梁振英做出让步。而在台湾，近日正因壹传媒遭具中资色彩的旺中集团总裁蔡衍明入主，令各界抗议加剧。</p>
 <p>日前，香港拟推行的国民教育科，因内容避谈六四事件，谈到毒奶粉和动车追撞等争议仅简短的2页，且多为中共歌功颂德，并批评美国民主制度、政党恶斗等，有如中共“洗脑式”教育而遭批评。</p>
-<p>随着港人游行示威、绝食抗议，一波波民意行动汇集，中共担心<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%8F%8D%E6%B4%97%E8%84%91.md#1">反洗脑</a>运动延烧中国大陆，激发全中国的民愤，因而迫使梁振英做出让步，撤回国民教育科3年开展期，并由学校自行决定是否开课。</p>
+<p>随着港人游行示威、绝食抗议，一波波民意行动汇集，中共担心<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%8D%E6%B4%97%E8%84%91.md#1">反洗脑</a>运动延烧中国大陆，激发全中国的民愤，因而迫使梁振英做出让步，撤回国民教育科3年开展期，并由学校自行决定是否开课。</p>
 <p>史学泰斗、中研院院士余英时曾指出，共产党在香港实行国民教育实质就是洗脑，“爱国教育中，就是要把党捧成最不自私、最进步的，同时也是为中国统一的一个党，所有好事都是这个党做的，而对于西方式的多党制，提出很严重的批评，认为这个不应该接受的。”余英时甚至表示：“尤其在台湾的老百姓，应该想一想、看看香港这个情况的发展。”</p>
-<p>港人的一波波民意抗议行动，在当时受到国际瞩目；不过，资深评论员林保华在其评论文章中指出，台湾的一些电视台虽有报导港人抗议行动，但因不愿惹怒中共而显得低调，但受“旺中”并购案困扰的《中国时报》，却怎么找也找不到香港<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%8F%8D%E6%B4%97%E8%84%91.md#1">反洗脑</a>的新闻，林保华说：“怪不得台湾人担心旺中如果并购有线电视上架系统的中嘉成功后，成为媒体怪兽，那就可能成为中共在台湾的洗脑机器了。”</p>
+<p>港人的一波波民意抗议行动，在当时受到国际瞩目；不过，资深评论员林保华在其评论文章中指出，台湾的一些电视台虽有报导港人抗议行动，但因不愿惹怒中共而显得低调，但受“旺中”并购案困扰的《中国时报》，却怎么找也找不到香港<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%8D%E6%B4%97%E8%84%91.md#1">反洗脑</a>的新闻，林保华说：“怪不得台湾人担心旺中如果并购有线电视上架系统的中嘉成功后，成为媒体怪兽，那就可能成为中共在台湾的洗脑机器了。”</p>
 <p>9月1日，4万港民参加反对国民教育科大游行；而在台北，则有上万人上街示威，反对媒体垄断。香港台湾都在反洗脑，香港的洗脑是透过教科书，台湾则是藉由媒体收购。</p>
-<p>《苹果日报》总主笔卜大中评论表示，“其实，本质上反洗脑与<ahref="https://github.com/dzedc2565/djy/blob/master/gb/tag/%E5%8F%8D%E5%9E%84%E6%96%AD.md#1">反垄断</a>是一回事。垄断是为了洗脑或方便洗脑；洗脑是合理化为某种政治目的之言论思想的市场垄断。”</p>
+<p>《苹果日报》总主笔卜大中评论表示，“其实，本质上反洗脑与<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%8D%E5%9E%84%E6%96%AD.md#1">反垄断</a>是一回事。垄断是为了洗脑或方便洗脑；洗脑是合理化为某种政治目的之言论思想的市场垄断。”</p>
 <p>近日，台湾环保团体、反媒体垄断团体及苹果日报工会发起多次抗议活动，例如11月26日，学生夜宿行政院前；11月29日，多个公民团体与北中南各地学生聚集在公平会前示威抗议，要求公平会驳回壹传媒交易案。◇</p>
 <table border="1" cellspacing="0" cellpadding="0">
 <tr>
@@ -91,42 +91,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/10/n3679258.md#1">反洗脑后效应 香港立法选举 尽显民意</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/11/n3680440.md#1">组图：香港大学生反洗脑大罢课 八千人参与</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/12/n3680598.md#1">港反洗脑延烧 八千大专生罢课 扩至中小学</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/13/n3681500.md#1">【玉清心】：俞忠欢的反洗脑网文为什么走红？</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/14/n3682362.md#1">杨千嬅护子反洗脑 李嘉欣为反洗脑打气</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/14/n3683067.md#1">反洗脑遍地开花 已三成学校成立关注组</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/18/n3685173.md#1">香港全民反洗脑 直捣中共死穴</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/26/n3691609.md#1">城大拟公投 保反洗脑宣言图腾</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/26/n3691610.md#1">城大拟公投 保反洗脑宣言图腾</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/12/9/30/n3694779.md#1">理大反洗脑罢课日 遍地开花深入学界</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/10/n3679258.md#1">反洗脑后效应 香港立法选举 尽显民意</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/11/n3680440.md#1">组图：香港大学生反洗脑大罢课 八千人参与</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/12/n3680598.md#1">港反洗脑延烧 八千大专生罢课 扩至中小学</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/13/n3681500.md#1">【玉清心】：俞忠欢的反洗脑网文为什么走红？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/14/n3682362.md#1">杨千嬅护子反洗脑 李嘉欣为反洗脑打气</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/14/n3683067.md#1">反洗脑遍地开花 已三成学校成立关注组</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/18/n3685173.md#1">香港全民反洗脑 直捣中共死穴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/26/n3691609.md#1">城大拟公投 保反洗脑宣言图腾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/26/n3691610.md#1">城大拟公投 保反洗脑宣言图腾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/9/30/n3694779.md#1">理大反洗脑罢课日 遍地开花深入学界</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/dzedc2565/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/20/n12200556.md#1">中印边境冲突后 中共四大异常举动的背后</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12201563.md#1">大暴雨将持续5天 大陆十多省市面临威胁</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12201603.md#1">最希望哪一国的观光客优先回流？日本民调：台湾</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202590.md#1">美国越来越多年轻人染上中共病毒</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12201515.md#1">三峡库区水位持续上涨 已超防洪水位2米</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/22/n12203481.md#1">余苑绮癌末动完肝手术 分享女儿跳舞疗愈影片</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202305.md#1">带子女为汪峰庆父亲节 章子怡搞笑写三大诉求</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202190.md#1">刘诗诗哭了怎么办？吴奇隆别样回答超宠妻</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/21/n12202465.md#1">港片商被逼签禁言加辣合约 前港姐发文表心声</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/20/n12200081.md#1">李瑞镇做客《一日三餐》 一登场就当大爷唠叨</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/20/n12199965.md#1">观日食占卜文化   省视当今中国会出大事吗？</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/19/n12198822.md#1">43岁身心亮红灯 跑步让他甩掉压力、走出困境</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/5/22/n12130110.md#1">【康熙大帝】从三阿哥到康熙帝（上）</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/6/5/n12162914.md#1">【命理】为什么夏天出生的命还会喜木火？</a></li>
-<li><a href="https://github.com/dzedc2565/djy/blob/master/gb/20/5/23/n12131411.md#1">【馨香雅句】一本简单的书 为何被广泛流传？（一）</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dzedc2565/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dzedc2565/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/12/3/n3743569.htm">香港反洗脑落幕 台湾反垄断升温</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/12/3/n3743569.htm">香港反洗脑落幕 台湾反垄断升温</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dzedc2565/djy/blob/master/gb/12/12/3/n3743569.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dzedc2565/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dzedc2565/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dzedc2565/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dzedc2565/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dzedc2565/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/12/12/3/n3743569.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
